--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "gatsby-plugin-react-helmet": "^3.0.8",
         "gatsby-plugin-sass": "^2.0.11",
         "gatsby-plugin-sharp": "^2.0.25",
+        "gatsby-plugin-typography": "^2.3.21",
         "gatsby-source-filesystem": "^2.0.23",
         "gatsby-transformer-sharp": "^2.1.15",
         "node-sass": "^4.12.0",
@@ -19,7 +20,9 @@
         "react-dom": "^16.8.4",
         "react-helmet": "^5.2.1",
         "react-intl": "^2.8.0",
-        "recompose": "^0.30.0"
+        "react-typography": "^0.16.19",
+        "recompose": "^0.30.0",
+        "typography": "^0.16.19"
     },
     "keywords": [
         "gatsby",
