--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
     "version": "0.0.1",
     "author": "Marek Janča <marek-janca@volny.cz>",
     "dependencies": {
-        "gatsby": "^2.1.24",
+        "gatsby": "^2.18.21",
+        "gatsby-background-image": "^0.9.12",
         "gatsby-image": "^2.0.31",
         "gatsby-plugin-manifest": "^2.0.22",
         "gatsby-plugin-offline": "^2.0.24",
         "gatsby-plugin-react-helmet": "^3.0.8",
         "gatsby-plugin-sass": "^2.0.11",
-        "gatsby-plugin-sharp": "^2.0.25",
+        "gatsby-plugin-sharp": "^2.3.13",
         "gatsby-plugin-typography": "^2.3.21",
-        "gatsby-source-filesystem": "^2.0.23",
-        "gatsby-transformer-sharp": "^2.1.15",
+        "gatsby-source-filesystem": "^2.1.46",
+        "gatsby-transformer-sharp": "^2.3.12",
         "node-sass": "^4.12.0",
         "prop-types": "^15.7.2",
-        "react": "^16.8.4",
-        "react-dom": "^16.8.4",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
         "react-helmet": "^5.2.1",
         "react-intl": "^2.8.0",
         "react-typography": "^0.16.19",
         "recompose": "^0.30.0",
+        "sharp": "^0.23.4",
         "typography": "^0.16.19"
     },
     "keywords": [
