prototype of slide animation working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gatsby-starter-internationalized",
+    "name": "our-wedding-site",
     "description": "A starter for websites with internationalized content and routes",
     "version": "0.0.1",
     "author": "Marek Janča <marek-janca@volny.cz>",
