--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "author": "Marek Janča <marek-janca@volny.cz>",
     "dependencies": {
+        "axios": "^0.19.2",
         "gatsby": "^2.18.21",
         "gatsby-background-image": "^0.9.12",
         "gatsby-image": "^2.0.31",
