--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "gatsby": "^2.18.21",
         "gatsby-background-image": "^0.9.12",
         "gatsby-image": "^2.0.31",
+        "gatsby-plugin-layout": "^1.2.1",
         "gatsby-plugin-manifest": "^2.0.22",
         "gatsby-plugin-offline": "^2.0.24",
         "gatsby-plugin-react-helmet": "^3.0.8",
