--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
     "name": "our-wedding-site",
-    "description": "A starter for websites with internationalized content and routes",
+    "description": "Our wedding site",
     "version": "0.0.1",
-    "author": "Marek Janča <marek-janca@volny.cz>",
+    "author": "Cameron Avelis <cmavelis@gmail.com>",
     "dependencies": {
         "axios": "^0.19.2",
         "gatsby": "^2.18.21",
         "gatsby-background-image": "^0.9.12",
         "gatsby-image": "^2.0.31",
         "gatsby-plugin-layout": "^1.2.1",
-        "gatsby-plugin-manifest": "^2.0.22",
+        "gatsby-plugin-manifest": "^2.3.3",
         "gatsby-plugin-offline": "^2.0.24",
         "gatsby-plugin-react-helmet": "^3.0.8",
         "gatsby-plugin-react-svg": "^3.0.0",
         "gatsby-plugin-sass": "^2.0.11",
-        "gatsby-plugin-sharp": "^2.3.13",
+        "gatsby-plugin-sharp": "^2.5.4",
         "gatsby-plugin-typography": "^2.3.21",
         "gatsby-source-filesystem": "^2.1.46",
-        "gatsby-transformer-sharp": "^2.3.12",
+        "gatsby-transformer-sharp": "^2.4.4",
         "leaflet": "^1.6.0",
         "node-sass": "^4.12.0",
         "prop-types": "^15.7.2",
@@ -44,10 +44,10 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/AckeeCZ/gatsby-starter-internationalized"
+        "url": "https://github.com/cmavelis/our-wedding-site"
     },
     "bugs": {
-        "url": "https://github.com/AckeeCZ/gatsby-starter-internationalized/issues"
+        "url": "https://github.com/cmavelis/our-wedding-site/issues"
     },
     "devDependencies": {
         "babel-preset-gatsby": "^0.1.8",
