adding react-leaflet plugin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "gatsby-plugin-manifest": "^2.3.3",
         "gatsby-plugin-offline": "^2.0.24",
         "gatsby-plugin-react-helmet": "^3.0.8",
+        "gatsby-plugin-react-leaflet": "^2.0.12",
         "gatsby-plugin-react-svg": "^3.0.0",
         "gatsby-plugin-sass": "^2.0.11",
         "gatsby-plugin-sharp": "^2.5.4",
@@ -25,6 +26,7 @@
         "react-dom": "^16.12.0",
         "react-helmet": "^5.2.1",
         "react-intl": "^2.8.0",
+        "react-leaflet": "^2.6.3",
         "react-typography": "^0.16.19",
         "recompose": "^0.30.0",
         "sharp": "^0.23.4",
